fix(card): backface visibility bug fixed

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -155,6 +155,7 @@ a {
       text-align: left;
       margin: 1rem;
       overflow: hidden;
+      background: transparent;
       .card-face{
         position: absolute;
         width: 100%;
@@ -183,6 +184,7 @@ a {
         border-radius: .5rem;
         margin: 0;
         margin-right: 5rem;
+        backface-visibility: hidden;
       }
       .text{
         color: $secondary;
